feat: implements swagger scheme
