# src/models/interfaces/user.ts
@@ -4,15 +4,15 @@ export interface IUser {
   name: string;
   email: string;
   password: string;
-  email_verified_at: Date;
-  password_reset_token: string;
-  remember_token: string;
-  provider_name: string;
-  provider_id: string;
-  profile_picture: string;
+  email_verified_at?: Date;
+  password_reset_token?: string;
+  remember_token?: string;
+  provider_name?: string;
+  provider_id?: string;
+  profile_picture?: string;
   status: 'active' | 'inactive';
-  lastLoginDate: Date;
-  currentLoginDate: Date;
+  lastLoginDate?: Date;
+  currentLoginDate?: Date;
   created_at: Date;
   updated_at: Date;
 }
